[project]
name = "finviz-elite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josephkern", email = "joseph.a.kern@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]

[project.scripts]
finviz-elite-mcp = "finviz_elite_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["finviz_elite", "finviz_elite_mcp"]
